--- a/GotApprovedAndroid/src/main/AndroidManifest.xml
+++ b/GotApprovedAndroid/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Reply">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
